# nri-isucon2022

./: LICENSE  README.md
docs/: manual.md  regulation.md  vagrant.md
initial-data/: user.csv
provisioning/: Vagrantfile
provisioning/ansible/: standalone.hosts  standalone.yaml
provisioning/ansible/roles/bench/tasks/: main.yaml
provisioning/ansible/roles/common/tasks/: main.yaml  package.yaml  sysctl.yaml  timezone.yaml  user.yaml
provisioning/ansible/roles/langs/tasks/: main.yaml
provisioning/ansible/roles/remove/tasks/: main.yaml
provisioning/ansible/roles/web-bootstrap/files/: env.sh  isubnb.conf
provisioning/ansible/roles/web-bootstrap/tasks/: main.yaml
provisioning/ansible/roles/web-frontend/tasks/: main.yaml
provisioning/ansible/roles/web-go/files/: isubnb.go.service
provisioning/ansible/roles/web-go/tasks/: main.yaml
webapp/backend/go/: .gitignore  go.mod  go.sum  main.go
webapp/backend/java/: .gitignore  pom.xml
webapp/backend/mysql/: .gitignore  my.cnf
webapp/backend/mysql/db/: 0_Schema.sql  1_CsvDataImport.sql
webapp/backend/python/: .gitignore  app.py  pyproject.toml
webapp/frontend/public/: index.html
webapp/frontend/public/404/: index.html
webapp/frontend/public/activities/: index.html
webapp/frontend/public/reservationActivity/: index.html
webapp/frontend/public/reservationHome/: index.html
webapp/frontend/public/reservationResult/: index.html
webapp/frontend/public/search/: index.html
webapp/frontend/public/searchActivity/: index.html
webapp/frontend/public/trips/: index.html
(+51 files in other folders)
